[package]
name = "boards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chips = { path = "../chips" }
log = "*" #Same version as chips
arbitrary-int = "*" #Same version as chips
simple_logger = "4.2.0"